@@ -1,5 +1,6 @@
-2006-06-12  Szilveszter Farkas <Szilveszter.Farkas@gmail.com>
+2006-06-13  Szilveszter Farkas <Szilveszter.Farkas@gmail.com>
 
+    * backend/info.py: nick() and revno() implemented
     * backend/commit.py: minor tweaks to push()
     * backend/init.py: minor tweaks to checkout() and branch()
 
